# TradeSnakeBackendC

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  requirements.txt  vcpkg.json
src/: BotHandler.hpp  StrategyFactory.hpp  TradeBotC.cpp  TradeBotC.h  strategy_registrations.hpp  struct.hpp
src/Analyzers/: MarketAnalyzer.hpp
src/Brokers/: Broker.hpp
src/Indicators/: Indicator.hpp
src/TradeBots/: TradeBot.hpp
